fix css for align classes

--- a/components/hero-unit.module.scss
+++ b/components/hero-unit.module.scss
@@ -58,11 +58,11 @@
     font-size: 2rem;
   }
 
-  .alignleft {
+  :global(.alignleft) {
     float: left;
   }
 
-  .alignright {
+  :global(.alignright) {
     float: right;
   }
 
